--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -118,5 +118,9 @@
   "colOperation": {
     "message": "Operation",
     "description": "The name of the action field for the custom column in the table"
+  },
+  "resetWidths": {
+    "message": "Restores the default column width of the table",
+    "description": "Restores the default column width of the table"
   }
 }
