--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -122,5 +122,17 @@
   "resetWidths": {
     "message": "Restores the default column width of the table",
     "description": "Restores the default column width of the table"
+  },
+  "clearMsg": {
+    "message": "The purge was successful and will take effect next time it is opened",
+    "description": "The purge was successful and will take effect next time it is opened"
+  },
+  "exportConfig": {
+    "message": "Export the configuration",
+    "description": "Export the configuration"
+  },
+  "importConfig": {
+    "message": "Import the configuration",
+    "description": "Import the configuration"
   }
 }
